src/test/ui/use/use-after-move-implicity-coerced-object.nll.stderr
error[E0382]: borrow of moved value: `n`
  --> $DIR/use-after-move-implicity-coerced-object.rs:28:13
   |
LL |     let n: Box<_> = box Number { n: 42 };
   |         - move occurs because `n` has type `std::boxed::Box<Number>`, which does not implement the `Copy` trait
LL |     let mut l: Box<_> = box List { list: Vec::new() };
LL |     l.push(n);
   |            - value moved here
LL |     let x = n.to_string();
   |             ^ value borrowed here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
